Don't hit assertion with "View Diff"

Commit 0c9ff4de caused KDevelop to crash on "View Diff" in almost all
 cases, because it didn't check
  `dstRevision.revisionType() == VcsRevision::Special`
 before calling `dstRevision.specialType()`.

BUG: 373763

I have other doubts about that commit, but for now just fix the bug.